@@ -45,9 +45,7 @@ import org.springframework.stereotype.Service;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
@@ -113,17 +111,20 @@ public class ProviderQueryService {
 
     private void askQuestions(AtomicReference<Session> s, Api api, Stream<QuestionData.PromptWithAnswerWithChapterId> questions) throws InterruptedException {
         long mills = System.currentTimeMillis();
-        ThreadPoolExecutor executor = (ThreadPoolExecutor) Executors.newFixedThreadPool(globals.threadNumber.getQueryApi());
+        ConcurrentHashMap<Long, ChapterWithResults> chapterCache;
+        long endMills;
+        try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
+            chapterCache = new ConcurrentHashMap<>();
+            AtomicInteger currTotalErrors = new AtomicInteger();
+            final List<Future<?>> f = new ArrayList<>();
+            questions.forEach(question -> {
+                Thread t = new Thread(() -> makeQuery(api, question, currTotalErrors, chapterCache), "ProviderQueryService-" + ThreadUtils.nextThreadNum());
+                f.add(executor.submit(t));
+            });
 
-        ConcurrentHashMap<Long, ChapterWithResults> chapterCache = new ConcurrentHashMap<>();
-        AtomicInteger currTotalErrors = new AtomicInteger();
-        questions.forEach(question -> {
-            Thread t = new Thread(() -> makeQuery(api, question, currTotalErrors, chapterCache), "ProviderQueryService-" + ThreadUtils.nextThreadNum());
-            executor.submit(t);
-        });
-
-        ThreadUtils.waitTaskCompleted(executor);
-        long endMills = ThreadUtils.execStat(mills, executor);
+            ThreadUtils.waitTaskCompleted(f, 20);
+            endMills = ThreadUtils.execStat(mills, f.size());
+        }
 
         for (ChapterWithResults withResults : chapterCache.values()) {
             AnswerParams ap = new AnswerParams();
